[package]
name = "safecoin-account-decoder"
version = "1.14.3"
description = "Safecoin account decoder"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-account-decoder"
license = "Apache-2.0"
edition = "2021"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
bv = "0.11.1"
lazy_static = "1.4.0"
serde = "1.0.138"
serde_derive = "1.0.103"
serde_json = "1.0.81"
safecoin-config-program = { path = "../programs/config", version = "=1.14.3" }
safecoin-sdk = { path = "../sdk", version = "=1.14.3" }
safecoin-vote-program = { path = "../programs/vote", version = "=1.14.3" }
safe-token = { version = "=3.5.0", path = "../../safecoin-program-library/token/program", features = ["no-entrypoint"] }
safe-token-2022 = { version = "=0.4", path = "../../safecoin-program-library/token/program-2022", features = ["no-entrypoint"] }
thiserror = "1.0"
zstd = "0.11.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
