[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "safecoin-accounts-bench"
version = "1.6.19"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
publish = false

[dependencies]
log = "0.4.11"
rayon = "1.5.0"
safecoin-logger = { path = "../logger", version = "=1.6.19" }
safecoin-runtime = { path = "../runtime", version = "=1.6.19" }
safecoin-measure = { path = "../measure", version = "=1.6.19" }
safecoin-sdk = { path = "../sdk", version = "=1.6.19" }
safecoin-version = { path = "../version", version = "=1.6.19" }
rand = "0.7.0"
clap = "2.33.1"
crossbeam-channel = "0.4"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
