[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "wickandbergamot-accounts-bench"
version = "1.14.17"
repository = "https://github.com/wickandbergamot/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.17"
rayon = "1.5.3"
wickandbergamot-logger = { path = "../logger", version = "=1.14.17" }
wickandbergamot-measure = { path = "../measure", version = "=1.14.17" }
wickandbergamot-runtime = { path = "../runtime", version = "=1.14.17" }
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }
wickandbergamot-version = { path = "../version", version = "=1.14.17" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
