[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-accounts-cluster-bench"
version = "1.10.32"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.14"
rand = "0.7.0"
rayon = "1.5.1"
safecoin-account-decoder = { path = "../account-decoder", version = "=1.10.32" }
safecoin-clap-utils = { path = "../clap-utils", version = "=1.10.32" }
safecoin-client = { path = "../client", version = "=1.10.32" }
safecoin-faucet = { path = "../faucet", version = "=1.10.32" }
safecoin-gossip = { path = "../gossip", version = "=1.10.32" }
safecoin-logger = { path = "../logger", version = "=1.10.32" }
safecoin-measure = { path = "../measure", version = "=1.10.32" }
safecoin-net-utils = { path = "../net-utils", version = "=1.10.32" }
safecoin-runtime = { path = "../runtime", version = "=1.10.32" }
safecoin-sdk = { path = "../sdk", version = "=1.10.32" }
safecoin-streamer = { path = "../streamer", version = "=1.10.32" }
safecoin-transaction-status = { path = "../transaction-status", version = "=1.10.32" }
safecoin-version = { path = "../version", version = "=1.10.32" }
safe-token = { version = "=3.3.0", path = "../../safecoin-program-library/token/program", features = ["no-entrypoint"] }

[dev-dependencies]
safecoin-core = { path = "../core", version = "=1.10.32" }
solana-local-cluster = { path = "../local-cluster", version = "=1.10.32" }
safecoin-test-validator = { path = "../test-validator", version = "=1.10.32" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
