[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-accounts-cluster-bench"
version = "1.14.17"
repository = "https://github.com/wickandbergamot/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
wickandbergamot-account-decoder = { path = "../account-decoder", version = "=1.14.17" }
wickandbergamot-clap-utils = { path = "../clap-utils", version = "=1.14.17" }
wickandbergamot-client = { path = "../client", version = "=1.14.17" }
wickandbergamot-faucet = { path = "../faucet", version = "=1.14.17" }
wickandbergamot-gossip = { path = "../gossip", version = "=1.14.17" }
wickandbergamot-logger = { path = "../logger", version = "=1.14.17" }
wickandbergamot-measure = { path = "../measure", version = "=1.14.17" }
wickandbergamot-net-utils = { path = "../net-utils", version = "=1.14.17" }
wickandbergamot-runtime = { path = "../runtime", version = "=1.14.17" }
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }
wickandbergamot-streamer = { path = "../streamer", version = "=1.14.17" }
wickandbergamot-transaction-status = { path = "../transaction-status", version = "=1.14.17" }
wickandbergamot-version = { path = "../version", version = "=1.14.17" }
safe-token = { version = "=3.5.1",  features = ["no-entrypoint"] }

[dev-dependencies]
wickandbergamot-core = { path = "../core", version = "=1.14.17" }
wickandbergamot-local-cluster = { path = "../local-cluster", version = "=1.14.17" }
wickandbergamot-test-validator = { path = "../test-validator", version = "=1.14.17" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
