[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "solana-accountsdb-plugin-postgres"
description = "The Safecoin AccountsDb plugin for PostgreSQL database."
version = "1.8.12"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-validator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
log = "0.4.14"
postgres = { version = "0.19.1", features = ["with-chrono-0_4"] }
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.67"
solana-accountsdb-plugin-interface = { path = "../accountsdb-plugin-interface", version = "=1.8.12" }
safecoin-logger = { path = "../logger", version = "=1.8.12" }
safecoin-measure = { path = "../measure", version = "=1.8.12" }
safecoin-metrics = { path = "../metrics", version = "=1.8.12" }
safecoin-sdk = { path = "../sdk", version = "=1.8.12" }
thiserror = "1.0.21"
tokio-postgres = "0.7.3"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
