[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "safecoin-banking-bench"
version = "1.10.32"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
publish = false

[dependencies]
clap = {version = "3.1.5", features = ["derive", "cargo"]}
crossbeam-channel = "0.5"
log = "0.4.14"
rand = "0.7.0"
rayon = "1.5.1"
safecoin-client = { path = "../client", version = "=1.10.32" }
safecoin-core = { path = "../core", version = "=1.10.32" }
safecoin-gossip = { path = "../gossip", version = "=1.10.32" }
safecoin-ledger = { path = "../ledger", version = "=1.10.32" }
safecoin-logger = { path = "../logger", version = "=1.10.32" }
safecoin-measure = { path = "../measure", version = "=1.10.32" }
safecoin-perf = { path = "../perf", version = "=1.10.32" }
solana-poh = { path = "../poh", version = "=1.10.32" }
safecoin-runtime = { path = "../runtime", version = "=1.10.32" }
safecoin-sdk = { path = "../sdk", version = "=1.10.32" }
safecoin-streamer = { path = "../streamer", version = "=1.10.32" }
safecoin-version = { path = "../version", version = "=1.10.32" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
