[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "wickandbergamot-banking-bench"
version = "1.14.17"
repository = "https://github.com/wickandbergamot/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
publish = false

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
crossbeam-channel = "0.5"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
wickandbergamot-client = { path = "../client", version = "=1.14.17" }
wickandbergamot-core = { path = "../core", version = "=1.14.17" }
wickandbergamot-gossip = { path = "../gossip", version = "=1.14.17" }
wickandbergamot-ledger = { path = "../ledger", version = "=1.14.17" }
wickandbergamot-logger = { path = "../logger", version = "=1.14.17" }
wickandbergamot-measure = { path = "../measure", version = "=1.14.17" }
wickandbergamot-perf = { path = "../perf", version = "=1.14.17" }
wickandbergamot-poh = { path = "../poh", version = "=1.14.17" }
wickandbergamot-runtime = { path = "../runtime", version = "=1.14.17" }
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }
wickandbergamot-streamer = { path = "../streamer", version = "=1.14.17" }
wickandbergamot-version = { path = "../version", version = "=1.14.17" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
