[package]
name = "safecoin-banks-client"
version = "1.14.17"
description = "Safecoin banks client"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-banks-client"
edition = "2021"

[dependencies]
borsh = "0.9.3"
futures = "0.3"
safecoin-banks-interface = { path = "../banks-interface", version = "=1.14.17" }
safecoin-program = { path = "../sdk/program", version = "=1.14.17" }
safecoin-sdk = { path = "../sdk", version = "=1.14.17" }
tarpc = { version = "0.29.0", features = ["full"] }
thiserror = "1.0"
tokio = { version = "~1.14.1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }

[dev-dependencies]
safecoin-banks-server = { path = "../banks-server", version = "=1.14.17" }
safecoin-runtime = { path = "../runtime", version = "=1.14.17" }

[lib]
crate-type = ["lib"]
name = "solana_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
