[package]
name = "safecoin-banks-interface"
version = "1.14.3"
description = "Safecoin banks RPC interface"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-banks-interface"
edition = "2021"

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
safecoin-sdk = { path = "../sdk", version = "=1.14.3" }
tarpc = { version = "0.29.0", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "solana_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
