[package]
name = "wickandbergamot-banks-interface"
version = "1.14.17"
description = "wickandbergamot banks RPC interface"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/wickandbergamot/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
documentation = "https://docs.rs/wickandbergamot-banks-interface"
edition = "2021"

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }
tarpc = { version = "0.29.0", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "solana_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
