[package]
name = "safecoin-banks-server"
version = "1.14.3"
description = "Safecoin banks server"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-banks-server"
edition = "2021"

[dependencies]
bincode = "1.3.3"
crossbeam-channel = "0.5"
futures = "0.3"
safecoin-banks-interface = { path = "../banks-interface", version = "=1.14.3" }
safecoin-client = { path = "../client", version = "=1.14.3" }
safecoin-runtime = { path = "../runtime", version = "=1.14.3" }
safecoin-sdk = { path = "../sdk", version = "=1.14.3" }
safecoin-send-transaction-service = { path = "../send-transaction-service", version = "=1.14.3" }
tarpc = { version = "0.29.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"

[lib]
crate-type = ["lib"]
name = "safecoin_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
