[package]
name = "wickandbergamot-banks-server"
version = "1.14.17"
description = "wickandbergamot banks server"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/wickandbergamot/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
documentation = "https://docs.rs/wickandbergamot-banks-server"
edition = "2021"

[dependencies]
bincode = "1.3.3"
crossbeam-channel = "0.5"
futures = "0.3"
wickandbergamot-banks-interface = { path = "../banks-interface", version = "=1.14.17" }
wickandbergamot-client = { path = "../client", version = "=1.14.17" }
wickandbergamot-runtime = { path = "../runtime", version = "=1.14.17" }
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }
wickandbergamot-send-transaction-service = { path = "../send-transaction-service", version = "=1.14.17" }
tarpc = { version = "0.29.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"

[lib]
crate-type = ["lib"]
name = "wickandbergamot_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
