[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "safecoin-bench-streamer"
version = "1.10.32"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
publish = false

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.5"
safecoin-net-utils = { path = "../net-utils", version = "=1.10.32" }
safecoin-streamer = { path = "../streamer", version = "=1.10.32" }
safecoin-version = { path = "../version", version = "=1.10.32" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
