[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "wickandbergamot-bench-streamer"
version = "1.14.17"
repository = "https://github.com/wickandbergamot/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
publish = false

[dependencies]
clap = { version = "3.1.5", features = ["cargo"] }
crossbeam-channel = "0.5"
wickandbergamot-net-utils = { path = "../net-utils", version = "=1.14.17" }
wickandbergamot-streamer = { path = "../streamer", version = "=1.14.17" }
wickandbergamot-version = { path = "../version", version = "=1.14.17" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
