[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "safecoin-bench-tps"
version = "1.10.32"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
publish = false

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.5"
log = "0.4.14"
rayon = "1.5.1"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
safecoin-clap-utils = { path = "../clap-utils", version = "=1.10.32" }
safecoin-cli-config = { path = "../cli-config", version = "=1.10.32" }
safecoin-client = { path = "../client", version = "=1.10.32" }
safecoin-core = { path = "../core", version = "=1.10.32" }
safecoin-faucet = { path = "../faucet", version = "=1.10.32" }
safecoin-genesis = { path = "../genesis", version = "=1.10.32" }
safecoin-gossip = { path = "../gossip", version = "=1.10.32" }
safecoin-logger = { path = "../logger", version = "=1.10.32" }
safecoin-measure = { path = "../measure", version = "=1.10.32" }
safecoin-metrics = { path = "../metrics", version = "=1.10.32" }
safecoin-net-utils = { path = "../net-utils", version = "=1.10.32" }
solana-rpc = { path = "../rpc", version = "=1.10.32" }
safecoin-runtime = { path = "../runtime", version = "=1.10.32" }
safecoin-sdk = { path = "../sdk", version = "=1.10.32" }
safecoin-streamer = { path = "../streamer", version = "=1.10.32" }
safecoin-version = { path = "../version", version = "=1.10.32" }
thiserror = "1.0"

[dev-dependencies]
serial_test = "0.6.0"
solana-local-cluster = { path = "../local-cluster", version = "=1.10.32" }
safecoin-test-validator = { path = "../test-validator", version = "=1.10.32" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
