[package]
name = "safecoin-bloom"
version = "1.10.32"
description = "Safecoin bloom filter"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-bloom"
edition = "2021"

[dependencies]
bv = { version = "0.11.1", features = ["serde"] }
fnv = "1.0.7"
log = "0.4.14"
rand = "0.7.0"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["rc"] }
serde_derive = "1.0.103"
safecoin-frozen-abi = { path = "../frozen-abi", version = "=1.10.32" }
safecoin-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.10.32" }
safecoin-sdk = { path = "../sdk", version = "=1.10.32" }

[lib]
crate-type = ["lib"]
name = "solana_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = "0.4"
