[package]
name = "wickandbergamot-bloom"
version = "1.14.17"
description = "wickandbergamot bloom filter"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/wickandbergamot/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
documentation = "https://docs.rs/wickandbergamot-bloom"
edition = "2021"

[dependencies]
bv = { version = "0.11.1", features = ["serde"] }
fnv = "1.0.7"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
serde = { version = "1.0.138", features = ["rc"] }
serde_derive = "1.0.103"
wickandbergamot-frozen-abi = { path = "../frozen-abi", version = "=1.14.17" }
wickandbergamot-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.14.17" }
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }

[lib]
crate-type = ["lib"]
name = "solana_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = "0.4"
