[package]
name = "safecoin-bucket-map"
version = "1.9.29"
description = "safecoin-bucket-map"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-bucket-map"
readme = "../README.md"
repository = "https://github.com/fair-exchange/safecoin"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
rayon = "1.5.0"
safecoin-logger = { path = "../logger", version = "=1.9.29" }
safecoin-sdk = { path = "../sdk", version = "=1.9.29" }
memmap2 = "0.5.0"
log = { version = "0.4.11" }
safecoin-measure = { path = "../measure", version = "=1.9.29" }
rand = "0.7.0"
fs_extra = "1.2.0"
tempfile = "3.2.0"

[lib]
crate-type = ["lib"]
name = "solana_bucket_map"

[[bench]]
name = "bucket_map"
