[package]
name = "safecoin-bucket-map"
version = "1.10.32"
description = "safecoin-bucket-map"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-bucket-map"
readme = "../README.md"
repository = "https://github.com/fair-exchange/safecoin"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = { version = "0.4.11" }
memmap2 = "0.5.3"
modular-bitfield = "0.11.2"
rand = "0.7.0"
safecoin-measure = { path = "../measure", version = "=1.10.32" }
safecoin-sdk = { path = "../sdk", version = "=1.10.32" }
tempfile = "3.3.0"

[dev-dependencies]
fs_extra = "1.2.0"
rayon = "1.5.0"
safecoin-logger = { path = "../logger", version = "=1.10.32" }

[lib]
crate-type = ["lib"]
name = "solana_bucket_map"

[[bench]]
name = "bucket_map"
