[package]
name = "wickandbergamot-bucket-map"
version = "1.14.17"
description = "wickandbergamot-bucket-map"
homepage = "https://wickandbergamot.org/"
documentation = "https://docs.rs/wickandbergamot-bucket-map"
readme = "../README.md"
repository = "https://github.com/wickandbergamot/wickandbergamot"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = { version = "0.4.17" }
memmap2 = "0.5.3"
modular-bitfield = "0.11.2"
rand = "0.7.0"
wickandbergamot-measure = { path = "../measure", version = "=1.14.17" }
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }
tempfile = "3.3.0"

[dev-dependencies]
fs_extra = "1.2.0"
rayon = "1.5.3"
wickandbergamot-logger = { path = "../logger", version = "=1.14.17" }

[lib]
crate-type = ["lib"]
name = "solana_bucket_map"

[[bench]]
name = "bucket_map"
