[package]
name = "safecoin-clap-utils"
version = "1.10.32"
description = "Safecoin utilities for the clap"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-clap-utils"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = "2.33.0"
rpassword = "6.0"
safecoin-perf = { path = "../perf", version = "=1.10.32" }
safecoin-remote-wallet = { path = "../remote-wallet", version = "=1.10.32", default-features = false }
safecoin-sdk = { path = "../sdk", version = "=1.10.32" }
thiserror = "1.0.30"
tiny-bip39 = "0.8.2"
uriparse = "0.6.3"
url = "2.2.2"

[dev-dependencies]
tempfile = "3.3.0"

[lib]
name = "safecoin_clap_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
